# octatools

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  chain.yaml  cicd.yml
.github/workflows/: release.yml
.gitlab/: cicd.yml
.gitlab/builds/: merge-request.yml
.gitlab/cicd/: coverage.yml  crates.yml  docker-build-check.yml  docker-release.yml  docker-setup.yml  gitlab-releases-cli.yml  lints.yml  release.yml  smoke-tests.yml  target-builds-check.yml
.gitlab/releases/: binary.yml
assets/: logo-wide.xcf  logo.xcf
data/tests/2/: chain.ot
data/tests/arrange/: blank.work  full_options.work  full_options.yaml  one_reminder_row.work  one_reminder_row.yaml
data/tests/blank-project/: arr01.work  arr08.work  bank05.work  bank09.work  markers.work  project.work
data/tests/drive/: test.yml
data/tests/projects/: blank.work  project.yaml
data/tests/samples/: chain.yaml
examples/confs/: chain-create.yaml  copybank.yaml  split-by-slices.yaml
examples/human-readable/json/: arr01.json  project.json
examples/human-readable/yaml/: arr01.yaml  project.yaml
examples/yaml/: chain-deconstruct.yaml
examples/yaml/confs/: chain-create.yaml  copybank.yaml
examples/yaml/dumps/: drive.yaml
octatools-bin/: Cargo.toml
octatools-bin/src/: actions.rs  cli.rs  main.rs  octatrack_sets.rs  utils.rs
octatools-bin/src/actions/: arrangements.rs  banks.rs  drive.rs  parts.rs  patterns.rs  projects.rs  samples.rs
octatools-bin/src/actions/banks/: tests.rs  utils.rs  yaml.rs
octatools-bin/src/actions/drive/yaml/: cfcard.rs
octatools-bin/src/actions/projects/: slots.rs
octatools-bin/src/actions/samples/yaml/: create.rs  deconstruct.rs  samplesdir.rs
octatools-bin/src/audio/: aiff.rs  utils.rs  wav.rs
octatools-cli/: Cargo.toml  TODO.md
octatools-cli/src/: actions.rs  audio.rs  cli.rs  main.rs  octatrack_sets.rs  utils.rs
octatools-cli/src/actions/: arrangements.rs  banks.rs  parts.rs  patterns.rs  projects.rs  samples.rs
octatools-cli/src/audio/: wav.rs
octatools-derive/: Cargo.toml
octatools-gui/: Cargo.toml  README.md
octatools-lib/: Cargo.toml  TODO.md
octatools-lib/src/: arrangements.rs  banks.rs  lib.rs  projects.rs  samples.rs
octatools-lib/src/arrangements/: deserialize.rs  serialize.rs
octatools-lib/src/banks/: parts.rs  patterns.rs
octatools-lib/src/projects/: metadata.rs  settings.rs  slots.rs
octatools-lib/src/projects/settings/: tempo.rs  trig_mode_midi_tracks.rs
octatools-lib/src/samples/: configs.rs  options.rs  slices.rs
octatools-py/: Cargo.toml  pyproject.toml
octatools-py/src/: lib.rs
octatools_derive/: Cargo.toml
octatools_derive/src/: lib.rs
ot-tools-cli/: Cargo.toml
ot-tools-cli/src/: actions.rs  bin_files.rs  cli.rs  main.rs  octatrack_sets.rs  operations.rs  sample_files.rs  utils.rs
ot-tools-cli/src/actions/: arrangements.rs  banks.rs  drive.rs  parts.rs  patterns.rs  projects.rs  samples.rs
ot-tools-cli/src/actions/banks/: tests.rs  utils.rs  yaml.rs
ot-tools-cli/src/actions/drive/yaml/: cfcard.rs
ot-tools-cli/src/actions/projects/: slots.rs
ot-tools-cli/src/actions/samples/: test.rs
ot-tools-cli/src/actions/samples/yaml/: create.rs
ot-tools-cli/src/audio/: utils.rs
ot-tools-cli/src/operations/: copy_banks.rs  list_slots.rs  sample_ops.rs  slot_ops.rs
ot-tools-derive/: Cargo.toml
ot-tools-derive/src/: lib.rs
ot-tools-io/: Cargo.toml
ot-tools-io/examples/: create_new_project_dir.rs  project_bin_to_json_str.rs  project_bin_to_yaml_str.rs  read_a_arr_work_file.rs  read_a_bank_work_file.rs  read_a_project_work_file.rs
ot-tools-io/src/: arrangements.rs  banks.rs  lib.rs  projects.rs  samples.rs  test_utils.rs
ot-tools-io/src/arrangements/: deserialize.rs  serialize.rs
ot-tools-io/src/banks/: parts.rs  patterns.rs
ot-tools-io/src/projects/: states.rs
ot-tools-lib/: Cargo.toml
ot-tools-lib/examples/: create_new_project_dir.rs  project_bin_to_json_str.rs  project_bin_to_yaml_str.rs  read_a_arr_work_file.rs  read_a_bank_work_file.rs  read_a_project_work_file.rs
ot-tools-lib/src/: lib.rs  samples.rs
ot-tools-lib/src/banks/: patterns.rs
ot-tools-lib/src/projects/: options.rs
ot-tools-lib/src/samples/: slices.rs
ot-tools-ops/: Cargo.toml  TODO.md
ot-tools-ops/src/: actions.rs  lib.rs
ot-tools-ops/src/actions/: banks.rs  parts.rs  patterns.rs  projects.rs  samples.rs
ot-tools-ops/src/actions/banks/: tests.rs  utils.rs
ot-tools-ops/src/actions/projects/: slots.rs
ot-tools-ops/src/actions/samples/: test.rs
ot-tools-ops/src/actions/samples/yaml/: samplesdir.rs
ot-tools-ops/src/audio/: utils.rs
ot-tools-py/: Cargo.toml  pyproject.toml
ot-tools-py/src/: lib.rs
serde_octatrack/: Cargo.toml
serde_octatrack/src/: arrangements.rs  banks.rs  banks_copy.rs  common.rs  constants.rs  lib.rs  projects.rs  samples.rs  utils.rs
serde_octatrack/src/arrangements/: deserialize.rs  serialize.rs
serde_octatrack/src/banks/: parts.rs  patterns.rs
serde_octatrack/src/projects/: common.rs  metadata.rs  options.rs  settings.rs  slots.rs  states.rs
serde_octatrack/src/projects/settings/: control_menu.rs  mixer.rs  tempo.rs  trig_mode_midi_tracks.rs
serde_octatrack/src/samples/: configs.rs  options.rs  slices.rs
src/: TODO.md  actions.rs  audio.rs  cli.rs  common.rs  config_yaml_samplechain.rs  constants.rs  indexfile_cf.rs  indexfile_samples.rs  indexing.rs  main.rs  octatrack.rs  octatrack_sets.rs  otproject.rs  otsample.rs  otsample_fncs.rs  otset.rs  results.rs  utils.rs  wavfile.rs  yaml_io.rs
src/actions/: arrangements.rs  banks.rs  chains.rs  copy.rs  drive.rs  dump.rs  indexing.rs  inspect.rs  list.rs  load.rs  parts.rs  patterns.rs  projects.rs  samples.rs
src/actions/banks/: yaml.rs
src/actions/chains/: yaml.rs
src/actions/copy/: utils.rs  yaml.rs
src/audio/: aiff.rs  utils.rs  wav.rs  wavfile.rs
src/indexing/: cfcard.rs  samplesdir.rs
src/octatrack/: banks.rs  banks_niu.rs  common.rs  options.rs  patterns_niu.rs  projects.rs  samples.rs  sets.rs
src/yaml_io/: samplechains.rs  samplesdir.rs
(+93 files in other folders)
