[workspace]
members = ["octatools-lib", "octatools-bin", "octatools-gui", "octatools_derive", "octatools-py"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "./LICENSE.md"
homepage = "https://gitlab.come/dijksterhuis/octatools/"
repository = "https://gitlab.come/dijksterhuis/octatools/"

[workspace.dependencies]
bincode = "1.3.3"
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.133"
serde_yml = "0.0.12"
walkdir = "2.5.0"
