[package]
name = "octatools-bin"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
license-file = "../LICENSE.md"
description = "CLI tool for handling Elektron Octatrack DPS-1 data files"
homepage = "https://gitlab.come/dijksterhuis/octatools/"
repository = "https://gitlab.come/dijksterhuis/octatools/"

[dependencies]
aifc = "0.5.3"
base16ct = "0.2.0"
base64ct = "1.6.0"
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive"] }
copy_dir = "0.1.3"
env_logger = "0.11.5"
hex-literal = "0.4.1"
hound = "3.5.1"
itertools = "0.13.0"
log = "0.4.22"
md5 = "0.7.0"
rand = "0.8.5"
walkdir = "2.5.0"
serde_octatrack = { path = "../serde_octatrack" }
