[package]
name = "octatools-bin"
description = "CLI tool for handling Elektron Octatrack DPS-1 data files"

version.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

# cargo uses a subpackage default-run key to determine the workspace default binary
# :/
# https://stackoverflow.com/a/51790493
default-run = "octatools-bin"


[dependencies]
aifc = "0.5.3"
base64ct = "1.6.0"
clap = { version = "4.5.20", features = ["derive"] }
copy_dir = "0.1.3"
env_logger = "0.11.5"
hound = "3.5.1"
log = "0.4.22"
md5 = "0.7.0"
rand = "0.8.5"
serde_octatrack = { path = "../serde_octatrack" }

bincode.workspace = true
itertools.workspace = true
serde.workspace = true
serde_yml.workspace = true
walkdir.workspace = true
