[package]
name = "octatools-gui"
description = "GUI tool for managing Elektron Octatrack DPS-1 data files"

version.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde_octatrack = { path = "../serde_octatrack" }
bincode.workspace = true
itertools.workspace = true
serde.workspace = true
serde_yml.workspace = true
walkdir.workspace = true
