[package]
name = "octatools-lib"
description = "Library for handling Elektron Octatrack DPS-1 data files."

version.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "octatools_lib"

[dependencies]
bincode.workspace = true
itertools.workspace = true
pyo3 = "0.23.4"
serde.workspace = true
serde-big-array = "0.5.1"
serde_json.workspace = true
serde_yml.workspace = true
walkdir.workspace = true
octatools_derive = { path = "../octatools_derive" }

