[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "octatools_py"
version = "0.0.1"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]