[package]
name = "ot-tools-cli"
description = "CLI tool for handling Elektron Octatrack DPS-1 data files"

version.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

# cargo uses a subpackage default-run key to determine the workspace default binary
# :/
# https://stackoverflow.com/a/51790493
default-run = "ot-tools"

[[bin]]
name = "ot-tools"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
ot-tools-io = { path = "../ot-tools-io" }
ot-tools-ops = { path = "../ot-tools-ops" }
serde.workspace = true
clap_complete = "4.5.44"
