[package]
name = "ot-tools-io"
description = "Library for reading/writing Elektron Octatrack DPS-1 binary data files."

version.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "ot_tools_io"

[dependencies]
bincode.workspace = true
itertools.workspace = true
serde.workspace = true
serde-big-array = "0.5.1"
serde_json.workspace = true
serde_yml.workspace = true
# TODO: Explicit version needed here for cargo publish, will require updating
#       if/when main workspace verion is incremented
ot-tools-derive = { path = "../ot-tools-derive", version = "0.1.0" }
