[package]
name = "ot-tools-py"
version.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "ot_tools_py"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py37"] }
ot-tools-lib = { path = "../ot-tools-lib" }
