[package]
name = "serde_octatrack"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
license-file = "../LICENSE.md"
description = "Ser/de library for Elektron Octatrack DPS-1 data files."
homepage = "https://gitlab.come/dijksterhuis/octatools/"
repository = "https://gitlab.come/dijksterhuis/octatools/"

[dependencies]
base16ct = "0.2.0"
base64ct = "1.6.0"
bincode = "1.3.3"
env_logger = "0.11.5"
hex-literal = "0.4.1"
itertools = "0.13.0"
log = "0.4.22"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.133"
serde_yml = "0.0.12"
walkdir = "2.5.0"
