[package]
name = "serde_octatrack"
description = "Ser/de library for Elektron Octatrack DPS-1 data files."

version.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
bincode.workspace = true
itertools.workspace = true
serde.workspace = true
serde-big-array = "0.5.1"
serde_json.workspace = true
serde_yml.workspace = true
walkdir.workspace = true
